# noo_B_ooking

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api/: api.py
core/: config.py
db/: base.py  db.py
migrations/: env.py
migrations/versions/: 00c7a7c5a829_init.py  06c1a873daf5_user_name.py  446143e03960_user_and_property_models_v_1_0.py  514addcb9b5f_init_user.py  6b8ff98be166_add_relationship_reservation.py  7447e39a9b85_second_init.py  983af03a8e1b_init_user.py  a9fae4ab0e29_reservation_model_update_v_1_0.py  aba7fd2ebc69_trying_to_fix_string_lenght.py  c890bfba4b37_trying_to_fix_string_lenght_2.py  e04503c03c4c_reservation_model_update_v_1_1.py
models/: property.py  reservation.py  user.py
schemas/: property.py  reservation.py  user.py
